# slippify

./: Cargo.toml  README.md
src/: app.rs  characters.rs  main.rs
